2004-09-23  Andrew Lindeman <alindeman@users.sf.net>    1.4.5-cvs-b205

	* Fix: Also replace this instance of printf (see log message for b204)

2004-09-23  Andrew Lindeman <alindeman@users.sf.net>    1.4.5-cvs-b204

	* Fix: Use sprintf instead of printf in the watermark form when setting the
	       error message to a string

2004-09-23  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b203

	* Fix: removed \n after view comments. it was in a single quotes.
	       (caught by Christian M.)

	* Change: Owner can now always see comments. global changed in classes/User.php

	* Fix: view all comments was not working proper.

	* New: Added css class commentIndication. (Currently only used in 'none' and 'jenskin').

2004-09-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b202

	* Change: Link movies to view_photo so that users can leave comments

	* Change: Update printChildren to use some better HTML (fewed redundant nestings)

	* Change: Add some more comments to find_orphans to alleviate (my) confusion

2004-09-23  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b201

	* New: Added new method 'getParentAlbums' to classes/Album.php

	* Change: use new function in view_album.php and view_photo.php to build the returnto links

	* Fix: Allow admins to change albumname even if they are not owner.
	
	* Fix: removed unneccessary index parameter when calling rename album from view_album

2004-09-21  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b200

	* Fix: removed warnings in find_orphans

	* New: Added function for recursive counting of array elements.
	       Code by Andrew Lindeman.

	* Fix: corrected count of orphaned images. (use of the new function)

	* Fix: Added tools/despam-comments.php to list of translateable files.

	* Change: Layout of find_orphans.
	
2004-09-20  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b199

	* Change: Don't play with un-initialized vars in config wiz.

	* Change: Try and use (include|require)_once where applicable - 